--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.6.4",
     "body-scroll-lock": "^4.0.0-beta.0",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
     "date-fns": "^3.3.1",
