--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,31 @@
-# Ignore node_modules folder
-node_modules/
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Ignore log files
-*.log
-logs/
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-# Ignore environment files
-.env
-.env.local
+# testing
+/coverage
 
-# Ignore build outputs
-dist/
-build/
+# production
 
-# Ignore system files
+#/build
+
+package-lock.json
+
+
+# misc
 .DS_Store
-Thumbs.db
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Ignore IDE specific files
-.vscode/
-.idea/
-*.iml
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Ignore temporary files
-*.tmp
-*.swp
-*.bak
+/build*
+./build
+build
